Worked on contrast issues

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -11,7 +11,17 @@ main {
     margin: .75rem ;
 }
 
+a{
+    color: #FFE8D6;
+}
+a:visited {
+    color: #FFE8D6;
+}
 
+
+nav a:visited {
+    color: black;
+}
 
 
 h1, h2, h3 {   
@@ -155,10 +165,6 @@ header p {
     grid-column: 1/3;
     grid-row: 2;
     margin-top: 0;
-}
-
-#spotlights a:visited {
-    color: white;
 }
 
 
@@ -324,6 +330,7 @@ form fieldset{
 form label {
     margin: 1.5em;
     display: block;
+    color: black;
 }
 
 
